Bug 422121 - If preview feature is enabled, Dolphin shows "Examining (finished)" notification often while I navigate through locations containing many videos/images
Summary: If preview feature is enabled, Dolphin shows "Examining (finished)" notificat...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-26 23:13 UTC by Patrick Silva
Modified: 2020-05-31 21:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
three "Examining (finished)" notifications (33.35 KB, image/png)
2020-05-26 23:13 UTC, Patrick Silva
Details
notifications while navigating through a .tar.gz archive (49.16 KB, image/png)
2020-05-27 16:57 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-05-26 23:13:31 UTC
Created attachment 128822 [details]
three "Examining (finished)" notifications

SUMMARY
As we can see in the attached screenshot, sometimes Dolphin even triggers several of this notification at the same time. Currently this bevavior occurs on both Arch Linux and neon unstable edition, it began on Arch Linux after update to frameworks 5.69. On my systems it's easier to reproduce when I navigate through a Samba share.

STEPS TO REPRODUCE
1. open Dolphin
2. make sure preview feature of Dolphin is enabled
3. go to a remote or local location containing several folders with many videos/images each
3. open a folder with many videos/images, go back to parent folder, open another folder with many videos/images. Repeat this step several times until the notification(s) to appear.

OBSERVED RESULT
at some point Dolphin will trigger "Examining (finished)" notification(s)

EXPECTED RESULT
Dolphin should never show this notificaton while we are navitating
through remote/local locations

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.71.0
Qt Version: 5.14.2
Comment 1 Patrick Silva 2020-05-27 16:57:47 UTC
Created attachment 128842 [details]
notifications while navigating through a .tar.gz archive

Another way to reproduce this annoying and useless notification:
1. enable "Open archives as folder" in "Navigation" section of Dolphin settings
2. navegate through a .tar.gz archive containing many files and subfolders (source code of Gwenview, for example)

As we can see in the attached screenshot, Dolphin triggers several notifications.
Comment 2 Méven Car 2020-05-30 11:57:39 UTC
What is your dolphin version ?
Is it more recent than the 20.04 release ?
Comment 3 Patrick Silva 2020-05-30 12:07:43 UTC
Dolphin 20.07.70 on neon unstable, Dolphin 20.04.1 on Arch Linux.
Comment 4 Méven Car 2020-05-30 17:07:42 UTC
Tentative patch https://invent.kde.org/system/dolphin/-/merge_requests/14
Comment 5 Patrick Silva 2020-05-30 23:17:34 UTC
I have just applied your patch on neon unstable.
The problem is no longer happening. :)
Comment 6 Méven Car 2020-05-31 10:02:23 UTC
Git commit 8aa7cde289d8e432016c9961527a7daa077c7389 by Méven Car.
Committed on 30/05/2020 at 13:01.
Pushed by meven into branch 'master'.

Prevents showing StatJob Progress info
Was introduced in ac234a9c55aed509b385ef03835a6d0f563e6a22

M  +1    -1    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/commit/8aa7cde289d8e432016c9961527a7daa077c7389