Prevents showing StatJob Progress info

BUG: 422121
Was introduced in ac234a9c55aed509b385ef03835a6d0f563e6a22